syntax = "proto3";

package video;

service VideoService {
  rpc UploadVideo(stream VideoChunk) returns (UploadStatus);
  rpc GetVideo(VideoRequest) returns (stream VideoChunk);
}

message VideoChunk {
  string uid = 1;
  bytes chunk = 2;
}

message UploadStatus {
  string message = 1;
}

message VideoRequest {
  string uid = 1;
}
